# conan-exploration

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci-conan-apple-clang.yml  ci-conan-arm.yml  ci-conan-clang.yml  ci-conan-gcc.yml  ci-conan-msvc-clang.yml  ci-conan-msvc.yml
include/exploration/: space.hpp
src/: somecode.cpp
test_package/: CMakeLists.txt  conanfile.py  example.cpp
